Add design credit to footer

--- a/index.html
+++ b/index.html
@@ -3449,6 +3449,7 @@
             <div class="footer-content">
                 <div class="copyright">
                     &copy; 2025 KENGROW Technologies. All rights reserved.
+                    <p>Designed by WebWiseSolutions</p>
                 </div>
                 <div class="footer-links">
                     <a href="#">Help / Support</a>
